# quiht

./: .gitignore  CHANGELOG.md  CLAUDE.md  IDEA.md  README.md  TODO.md  build.sh  publish.sh  test.sh  view.sh
.github/workflows/: ci.yml  release.yml
.omc/: project-memory.json
.omc/sessions/: 77b11fe5-4244-4307-b701-bbeb6381fb2d.json  9818c075-ddfd-45dd-9561-29556213e5bb.json  c36fdac9-b925-42f0-b0ba-b849bc59f537.json
docs/: index.html
docs/assets/: index-AZX0UqgX.css  index-B09Iy3lF.js  index-BEgDU6Aq.js  index-Bo9E-JlB.js  index-Bq_E7sjX.css  index-C_TuHrrN.css  index-D6Ade38A.css  index-D9HRJbP3.js  index-DKzjDkdY.css  index-DWlTT8Fb.css  index-DjDPwdo7.js  index-DzDz-FtN.css  index-H4ESAWk4.js  index-c6i9zgqx.js
docs/examples/: index.json
example/: .quiht.json  translations.json
example/ui/: CLAUDE.md  demo-angle.ui  demo-dialog.ui  demo-slider.ui  demo-start.ui  dlgnamesuffix.ui  welcomeform.ui  yanglepopup.ui  yvaluepopup.ui
quiht-core/: CLAUDE.md  README.md  RESEARCH.md  SPEC.md  alpine.css  index.css  package-lock.json  package.json  package.json.bak  pnpm-lock.yaml  quiht-core.js  tsconfig.json
quiht-core/src/: CLAUDE.md  (+8 more)
quiht-demo/: README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
quiht-l10n-vu/: README.md  SPEC.md  app.css  app.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
quiht-tools/: README.md  pyproject.toml  quiht-jsongen.py
quiht-tools/src/quiht_tools/: __init__.py  __main__.py  jsongen.py  pack.py
quiht-tools/tests/: test_quiht_tools.py
(+25 files in other folders)
